# AI

./: .gitignore  README.md  requirements.txt  setup.cfg
doc/: huggingface_hub.md  results.md  training_considerations.md
notebooks/: compare_file_structures.ipynb  evaluate_conditional_generation.ipynb  labeled_txt_inputs_generator.ipynb  train_cond_generator.ipynb  train_poems_classifier.ipynb  txt_inputs_generator.ipynb
poemsai/: config.py  data.py  hf_utils.py  metrics.py  nb_utils.py  pipelines.py  tokenization.py  torch_utils.py  trainer.py
tests/: data_test.py  data_tests.py  hf_utils_test.py  metrics_test.py  tokenization_test.py
