[metadata]
name = poemsai
author = Poems-AI
version = 1.0
description = AI models and tools to work with poetry
long_description = AI models and tools to analyze and generate poetry 
keywords = nlp, poetry, poems
license = MIT
url = 'https://github.com/Poems-AI/AI'
[options]
install_requires =
    datasets
    happytransformer
    numpy
    pandas 
    scikit-learn
    torch
    transformers>=4.17
packages = find:
[options.extras_require]
test = 
    pytest
